<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileActivity">

    <EditText
        android:id="@+id/file_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_first_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/file_sname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_second_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/file_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/vh_gender"/>

    <EditText
        android:id="@+id/file_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/vh_age"/>

    <EditText
        android:id="@+id/file_specialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/vh_specialization"/>

</LinearLayout>