<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/details_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_first_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/details_sname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/file_second_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/details_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/vh_gender"/>

    <TextView
        android:id="@+id/details_specialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/vh_specialization"/>

</LinearLayout>